<resources>
    <string name="app_name">517.Today</string>

    <string name="loading">Loading...</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signin">Sign In</string>

    <string name="main_nav_home">Home</string>
    <string name="main_nav_grocery">Grocery</string>
    <string name="main_nav_order">Orders</string>
    <string name="main_nav_account">Account</string>


    <string name="account">Account</string>
    <string name="account_address">Address</string>
    <string name="account_contact">Contact us</string>
    <string name="account_credit">Credit</string>
    <string name="account_favorite">Favorite</string>
    <string name="account_language">Language</string>
    <string name="account_payment">Payment</string>
    <string name="account_setting">Settings</string>
    <string name="account_setting_legal">Legal</string>

    <string name="address_manage_title">Address</string>
    <string name="address_manage_saved_address">Saved addresses</string>
    <string name="address_manage_add_new">New</string>
    <string name="address_manage_address_list_empty">Empty</string>

    <string name="new_address_title">New Address</string>

    <string name="modify_address_title">Modify Address</string>
    <string name="modify_address_contact_info">Contact Information(Required)</string>
    <string name="modify_address_first_name">First Name</string>
    <string name="modify_address_last_name">Last Name</string>
    <string name="modify_address_phone">Phone Number</string>
    <string name="modify_address_label">Address Label(Optional)</string>
    <string name="modify_address_label_example">E.g. Home </string>
    <string name="modify_address_detail">Address Detail(Required)</string>

    <string name="modify_address_search_label">Search address</string>
    <string name="modify_address_street_label">Street</string>
    <string name="modify_address_room_label">Room</string>
    <string name="modify_address_city_label">City</string>
    <string name="modify_address_state_label">State</string>
    <string name="modify_address_zip_label">Zip Code</string>

    <string name="modify_address_search_hint">Search address</string>
    <string name="modify_address_street_hint">Street</string>
    <string name="modify_address_room_hint">Room</string>
    <string name="modify_address_city_hint">City</string>
    <string name="modify_address_state_hint">State</string>
    <string name="modify_address_zip_hint">Zip Code</string>

    <string name="modify_address_phone_validation">! Invalid Phone Number</string>
    <string name="modify_address_street_validation">! Street Required</string>
    <string name="modify_address_required_validation">! Required</string>

    <string name="modify_address_delete">Delete</string>
    <string name="modify_address_add">Save</string>

    <string name="payment_manage_title">Payment</string>
    <string name="payment_manage_credit_card">Credit Card</string>
    <string name="payment_manage_add_new">New</string>
    <string name="payment_manage_credit_card_list_empty">Empty</string>

    <string name="new_card_title">Add new card</string>
    <string name="new_card_add">Save</string>
    <string name="new_card_number_label">Card Number</string>
    <string name="new_card_expire_label">Expire</string>
    <string name="new_card_cvv_label">CVV</string>
    <string name="new_card_zip_label">Zip Code</string>
    <string name="new_card_validation_card_number">Invalid card number</string>
    <string name="new_card_validation_card_expire">Invalid expire</string>
    <string name="new_card_validation_card_cvv">Invalid cvv</string>
    <string name="new_card_validation_card_zip">Invalid zip</string>


    <string name="contact_title">Contact</string>




    <string name="credit_title">Credit</string>

    <string name="favorite_title">Favorite List</string>

    <string name="language_select_title">Choose Language</string>
    <string name="language_select_confirm">Confirm</string>
    <string name="language_select_confirm_selection">Confirm change language?</string>

    <string name="language_select_english" translatable="false">English</string>
    <string name="language_select_chinese" translatable="false">简体中文</string>

    <string name="setting_title">Settings</string>

    <string name="profile_title">Profile</string>
    <string name="profile_update">Update</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_nickname_hint">Enter your name here</string>
    <string name="Legal_title">Legal</string>

    <!-- version check -->
    <string name="download_newest_ver">Please download the newest version from google play</string>
    <string name="market_uri" translatable="false">market://details?id=%1$s</string>
    <string name="web_uri" translatable="false">https://play.google.com/store/apps/details?id=%1$s</string>
</resources>