<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddressManageActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <fragment
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_bar_height"
                android:id="@+id/title_bar_back"
                android:layout_alignParentTop="true"
                android:name="com.us517.today.ui.titleBar.TitleBarBack"
                tools:layout="@layout/fragment_title_bar_back">
            </fragment>
            <TextView
                android:id="@+id/text_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/address_manage_title"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/divider_light" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:gravity="start|center_vertical"
                android:layout_marginStart="@dimen/edge_margin"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/address_manage_saved_address"/>
            <View
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/address_manage_address_new"
                style="@style/account_menuItem_view"
                android:layout_width="wrap_content"
                android:drawablePadding="0dp"
                android:drawableStart="@drawable/icon_add_black_24"
                android:gravity="end|center_vertical"
                android:text="@string/address_manage_add_new" />

        </LinearLayout>
        <ListView
            android:id="@+id/address_manage_addressList"
            android:listSelector="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/address_manage_address_list_empty"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/address_manage_address_list_empty"
            android:textColor="#525252"
            android:visibility="gone"
            />
    </LinearLayout>
</RelativeLayout>