<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    tools:context=".activity.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <fragment
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_bar_height"
                android:id="@+id/title_bar_back"
                android:layout_alignParentTop="true"
                android:name="com.us517.today.ui.titleBar.TitleBarBack"
                tools:layout="@layout/fragment_title_bar_back">
            </fragment>

            <TextView
                android:id="@+id/text_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/profile_title"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/divider_light" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    />

            </RelativeLayout>
            <TextView
                android:id="@+id/profile_avatar_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/edit_pan_24"
                android:layout_gravity="center"
                android:textColor="@color/yellow"
                android:drawablePadding="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="Edit"/>
        </LinearLayout>
        <!-- Divider -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="@dimen/edge_margin"
                android:text="@string/profile_nickname"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/profile_nickname"
                android:maxLines="1"
                android:inputType="text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:maxLength="16"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_ "
                android:layout_height="match_parent"
                android:hint="@string/profile_nickname_hint"
                android:background="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id="@+id/profile_nickname_edit"
                android:drawableEnd="@drawable/edit_24"
                android:paddingEnd="@dimen/edge_margin"
                android:paddingStart="@dimen/edge_margin"
                android:gravity="end|center_vertical"

                />
        </LinearLayout>




        <android.widget.Button
            android:layout_marginTop="20dp"
            android:id="@+id/profile_update"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:background="@drawable/button_outline_selector"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:text="@string/profile_update" />
    </LinearLayout>


</RelativeLayout>
